--- a/playbooks/deprovision.yml
+++ b/playbooks/deprovision.yml
@@ -1,4 +1,4 @@
-- name: sa-smart-gateway playbook to deprovision the application
+- name: Smart Gateway playbook to deprovision the application
   hosts: localhost
   gather_facts: false
   connection: local
