--- a/playbooks/provision.yml
+++ b/playbooks/provision.yml
@@ -1,8 +1,9 @@
-- name: sa-smart-gateway playbook to provision the application
+- name: Smart Gateway playbook to provision the application
   hosts: localhost
   gather_facts: false
   connection: local
   vars:
     apb_action: provision
-  roles:
-  - role: sa-smart-gateway
+
+  tasks:
+  - include_role: smart_gateway
