Current efforts to get things working
Right now, pretty much everything is working except for the ServiceMonitor configuration.
For some reason the same way I did it in telemetry-framework-apb doesn't seem to work here.

I'm wondering if it has something to do with how I was doing the setup with Prometheus in
the other playbook, issue with k8s module not working the same as oc_obj, or something else
I haven't been able to track down yet.:

--- a/apb.yml
+++ b/apb.yml
@@ -1,10 +1,10 @@
 version: 1.0
 name: smart-gateway-apb
-description: Smart Gateway for providing metrics and events from an AMQP 1.x bus
+description: "Smart Gateway for providing metrics and events from an AMQP 1.x bus"
 bindable: False
 async: optional
 metadata:
-  displayName: Smart Gateway (APB)
+  displayName: "Smart Gateway (APB)"
   providerDisplayName: "Red Hat, Inc."
 plans:
   - name: default
@@ -13,6 +13,17 @@ plans:
     metadata:
         displayName: Default
     parameters:
+        - name: oc_login_username
+          type: string
+          title: OpenShift administration login username
+          required: true
+          display_group: OpenShift Credentials
+        - name: oc_login_password
+          type: string
+          title: OpenShift administration login password
+          display_type: password
+          required: true
+          display_group: OpenShift Credentials
         - name: sg_type
           title: Type of Smart Gateway to deploy
           type: enum
@@ -23,6 +34,5 @@ plans:
           title: Unique label for Smart Gateway
           type: string
           display_type: text
-          default: "blue"
+          default: "white"
           required: true
-
